--- a/.github/workflows/my-pipeline.yaml
+++ b/.github/workflows/my-pipeline.yaml
@@ -1,10 +1,9 @@
 name: My Pipeline
-on: workflow_dispatch:
+on: 
+  workflow_dispatch:
 jobs:
   greeting:
     runs-on: ubuntu-latest
     steps:
       - name: say hello
-        run: echo"hello world""
-
-      
+        run: echo "hello world"   
