--- a/.github/workflows/my-pipeline.yaml
+++ b/.github/workflows/my-pipeline.yaml
@@ -7,5 +7,5 @@ jobs:
     steps:
     - name: setup java
              uses:actions/setup-java@v5.0.0
-       with
+       With:
              java-version:"17"
