--- a/.github/workflows/my-pipeline.yaml
+++ b/.github/workflows/my-pipeline.yaml
@@ -6,5 +6,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: setup java
-      uses:    actions/setup-java@v5.0.0
-       with:java-version:"17"
+      uses:    actions/setup-java@v4
+       with:java-version:'17'
